# data-challenge-dbt

./: README.md  cfg.py  constants.py  dbt_project.yml  docker-compose.yml  loaders.py  main.py  pyproject.toml  requirements.txt  settings.ini
airflow/: docker-compose.yaml
airflow/dags/: my_dag.py
data_challenge_dbt/: dbt_project.yml
data_challenge_dbt/models/challenge/: bibliotecas.sql  cines.sql  cines_insights.sql  museos.sql  schema.yml
dbt_airflow/models/example/: my_first_dbt_model.sql
minio/: docker-compose.yml  minio.py
