[tool.poetry]
name = "dbt-airflow"
version = "0.1.0"
description = ""
authors = ["RAJerez <rodrigoagustin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.18,<3.12"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
dbt-postgres = "^1.7.7"
boto3 = "^1.34.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
