[tool.poetry]
name = "data-challenge-dbt"
version = "0.1.0"
description = ""
authors = ["RAJerez <rodrigoagustin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
requests = "^2.31.0"
dbt-postgres = "^1.7.4"
pandas = "^2.1.4"
ipykernel = "^6.29.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
